# gie-client

./: Cargo.toml  README.md
.github/workflows/: live-contract.yml  publish.yml
examples/: agsi_snapshot_sync.rs  alsi_time_series_async_external_client.rs  alsi_time_series_polars.rs  alsi_time_series_sync.rs
src/: agsi.rs  alsi.rs  client_core.rs  common.rs  error.rs  lib.rs
src/common/: date_range.rs  http_core.rs  polars_core.rs  query.rs  serde_ext.rs  time_series.rs  types.rs
tests/: live_api_contract.rs
