[package]
name = "gie-client"
version = "0.1.0"
edition = "2024"
authors = ["hexqnt <hexqntlab@gmail.com>"]
description = "Strictly-typed, unofficial Rust client for downloading GIE AGSI and ALSI data."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hexqnt/gie-client"
documentation = "https://docs.rs/gie-client"
keywords = ["gie", "agsi", "alsi", "energy", "api-client"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
default = []
polars = ["dep:polars"]
chrono = ["dep:chrono"]

[dependencies]
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "json",
    "query",
    "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
chrono = { version = "0.4", optional = true, default-features = false, features = [
    "std",
] }
thiserror = "2"
polars = { version = "0.53", optional = true, default-features = false, features = [
    "fmt",
] }
tokio = { version = "1", default-features = false, features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
